# code-graph-backend

./: .env.template  README.md  lsp.py  pyproject.toml  requirements.txt
.github/: dependabot.yml
.github/workflows/: python-app.yml  release-image.yml
api/: __init__.py  graph.py  index.py  llm.py  project.py
api/analyzers/: analyzer.py  source_analyzer.py
api/analyzers/c/: analyzer.py
api/analyzers/csharp/: analyzer.py
api/analyzers/java/: analyzer.py
api/analyzers/javascript/: analyzer.py
api/analyzers/kotlin/: analyzer.py
api/analyzers/python/: analyzer.py
api/entities/: __init__.py  entity.py  file.py
api/git_utils/: git_graph.py  git_utils.py
test-project/: a.c  b.py___  c.java
tests/: test_csharp_analyzer.py  test_js_analyzer.py  test_kotlin_analyzer.py  test_py_imports.py
tests/endpoints/: test_auto_complete.py  test_find_paths.py  test_get_neighbors.py  test_graph_entities.py  test_list_commits.py  test_list_repos.py  test_repo_info.py
tests/source_files/csharp/: Program.cs
tests/source_files/js/: src.js
tests/source_files/kotlin/: src.kt
tests/source_files/py_imports/: module_a.py  module_b.py
